time_parser/time_parser.go

//line time_parser/time_parser.rl:1
package time_parser

import (
  "fmt"
)



//line time_parser/time_parser.go:12
const time_parser_start int = 0
const time_parser_first_final int = 39
const time_parser_error int = -1

const time_parser_en_main int = 0


//line time_parser/time_parser.rl:11


func ParseTime(data string) (year, month, day string) {
  cs, p, pe, eof := 0, 0, len(data), len(data)
  year, month, day = "", "", ""
  year_begin_index, year_end_index := -1, -1
  month_begin_index, month_end_index := -1, -1
  day_begin_index, day_end_index := -1, -1
  
//line time_parser/time_parser.go:30
	{
	cs = time_parser_start
	}

//line time_parser/time_parser.go:35
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 0:
		goto st_case_0
	case 1:
		goto st_case_1
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 86:
		goto st_case_86
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 89:
		goto st_case_89
	case 90:
		goto st_case_90
	case 91:
		goto st_case_91
	case 92:
		goto st_case_92
	case 93:
		goto st_case_93
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	}
	goto st_out
	st0:
		if p++; p == pe {
			goto _test_eof0
		}
	st_case_0:
		switch data[p] {
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
tr1:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st1
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
//line time_parser/time_parser.go:277
		switch data[p] {
		case 228:
			goto tr2
		case 229:
			goto tr7
		case 230:
			goto tr8
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
tr2:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st2
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
//line time_parser/time_parser.go:319
		switch data[p] {
		case 184:
			goto st3
		case 185:
			goto st30
		case 186:
			goto st31
		case 187:
			goto st32
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
		switch data[p] {
		case 128:
			goto st1
		case 131:
			goto st1
		case 137:
			goto st1
		case 138:
			goto st4
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
		switch data[p] {
		case 228:
			goto tr15
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
tr15:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st5
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
//line time_parser/time_parser.go:419
		switch data[p] {
		case 184:
			goto st6
		case 185:
			goto st30
		case 186:
			goto st31
		case 187:
			goto st32
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
		switch data[p] {
		case 128:
			goto st1
		case 131:
			goto st1
		case 137:
			goto st1
		case 138:
			goto st4
		case 170:
			goto st7
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		switch data[p] {
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr18
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
tr3:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st8
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
//line time_parser/time_parser.go:521
		switch data[p] {
		case 133:
			goto st9
		case 137:
			goto st14
		case 141:
			goto st17
		case 142:
			goto st22
		case 155:
			goto st25
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
		switch data[p] {
		case 171:
			goto st1
		case 173:
			goto st1
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
tr4:
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st10
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
//line time_parser/time_parser.go:586
		switch data[p] {
		case 152:
			goto st11
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
		switch data[p] {
		case 168:
			goto st12
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
		switch data[p] {
		case 228:
			goto tr2
		case 229:
			goto tr26
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
tr26:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
//line time_parser/time_parser.rl:62

        // fmt.Println("end day")
        day_end_index = p
        // fmt.Println(day_end_index)
    
	goto st13
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
//line time_parser/time_parser.go:680
		switch data[p] {
		case 133:
			goto st9
		case 137:
			goto st14
		case 141:
			goto st17
		case 142:
			goto st22
		case 155:
			goto st25
		case 164:
			goto st27
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
		switch data[p] {
		case 141:
			goto st15
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
		switch data[p] {
		case 228:
			goto tr15
		case 229:
			goto tr29
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
tr29:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:28

        // fmt.Println("end year")
        year_end_index = p
        // fmt.Println(year_end_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
//line time_parser/time_parser.rl:62

        // fmt.Println("end day")
        day_end_index = p
        // fmt.Println(day_end_index)
    
	goto st16
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
//line time_parser/time_parser.go:790
		switch data[p] {
		case 133:
			goto st9
		case 137:
			goto st14
		case 141:
			goto st17
		case 142:
			goto st22
		case 155:
			goto st25
		case 164:
			goto st27
		case 185:
			goto st26
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
		switch data[p] {
		case 129:
			goto st1
		case 131:
			goto st1
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
tr5:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st18
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
//line time_parser/time_parser.go:871
		switch data[p] {
		case 153:
			goto st19
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
		switch data[p] {
		case 190:
			goto st1
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
tr6:
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
	goto st20
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
//line time_parser/time_parser.go:926
		switch data[p] {
		case 191:
			goto st21
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
		switch data[p] {
		case 153:
			goto st4
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
		switch data[p] {
		case 187:
			goto st23
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
		switch data[p] {
		case 228:
			goto tr2
		case 229:
			goto tr34
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
tr34:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:28

        // fmt.Println("end year")
        year_end_index = p
        // fmt.Println(year_end_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st24
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
//line time_parser/time_parser.go:1043
		switch data[p] {
		case 133:
			goto st9
		case 137:
			goto st14
		case 141:
			goto st17
		case 142:
			goto st22
		case 155:
			goto st25
		case 185:
			goto st26
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st25:
		if p++; p == pe {
			goto _test_eof25
		}
	st_case_25:
		switch data[p] {
		case 155:
			goto st1
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
	st26:
		if p++; p == pe {
			goto _test_eof26
		}
	st_case_26:
		switch data[p] {
		case 180:
			goto tr35
		case 228:
			goto tr2
		case 229:
			goto tr3
		case 230:
			goto tr4
		case 231:
			goto tr5
		case 232:
			goto tr6
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr1
		}
		goto st0
tr35:
//line time_parser/time_parser.rl:33

        fmt.Println(year_begin_index, year_end_index)
        if year_begin_index < year_end_index {
            year = data[year_begin_index: year_end_index]
        }
    
	goto st39
tr36:
//line time_parser/time_parser.rl:67

        if day_begin_index < day_end_index {
            day = data[day_begin_index: day_end_index]
        }
    
	goto st39
tr89:
//line time_parser/time_parser.rl:62

        // fmt.Println("end day")
        day_end_index = p
        // fmt.Println(day_end_index)
    
//line time_parser/time_parser.rl:67

        if day_begin_index < day_end_index {
            day = data[day_begin_index: day_end_index]
        }
    
	goto st39
	st39:
		if p++; p == pe {
			goto _test_eof39
		}
	st_case_39:
//line time_parser/time_parser.go:1154
		switch data[p] {
		case 228:
			goto tr46
		case 229:
			goto tr47
		case 230:
			goto tr48
		case 231:
			goto tr49
		case 232:
			goto tr50
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr45
		}
		goto st39
tr45:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st40
tr90:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:62

        // fmt.Println("end day")
        day_end_index = p
        // fmt.Println(day_end_index)
    
//line time_parser/time_parser.rl:67

        if day_begin_index < day_end_index {
            day = data[day_begin_index: day_end_index]
        }
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st40
	st40:
		if p++; p == pe {
			goto _test_eof40
		}
	st_case_40:
//line time_parser/time_parser.go:1228
		switch data[p] {
		case 228:
			goto tr46
		case 229:
			goto tr51
		case 230:
			goto tr52
		case 231:
			goto tr49
		case 232:
			goto tr50
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr45
		}
		goto st39
tr46:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st41
tr91:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:62

        // fmt.Println("end day")
        day_end_index = p
        // fmt.Println(day_end_index)
    
//line time_parser/time_parser.rl:67

        if day_begin_index < day_end_index {
            day = data[day_begin_index: day_end_index]
        }
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st41
	st41:
		if p++; p == pe {
			goto _test_eof41
		}
	st_case_41:
//line time_parser/time_parser.go:1302
		switch data[p] {
		case 184:
			goto st42
		case 185:
			goto st77
		case 186:
			goto st78
		case 187:
			goto st79
		case 228:
			goto tr46
		case 229:
			goto tr47
		case 230:
			goto tr48
		case 231:
			goto tr49
		case 232:
			goto tr50
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr45
		}
		goto st39
	st42:
		if p++; p == pe {
			goto _test_eof42
		}
	st_case_42:
		switch data[p] {
		case 128:
			goto st40
		case 131:
			goto st40
		case 137:
			goto st40
		case 138:
			goto st43
		case 228:
			goto tr46
		case 229:
			goto tr47
		case 230:
			goto tr48
		case 231:
			goto tr49
		case 232:
			goto tr50
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr45
		}
		goto st39
	st43:
		if p++; p == pe {
			goto _test_eof43
		}
	st_case_43:
		switch data[p] {
		case 228:
			goto tr59
		case 229:
			goto tr47
		case 230:
			goto tr48
		case 231:
			goto tr49
		case 232:
			goto tr50
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr45
		}
		goto st39
tr59:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st44
	st44:
		if p++; p == pe {
			goto _test_eof44
		}
	st_case_44:
//line time_parser/time_parser.go:1402
		switch data[p] {
		case 184:
			goto st45
		case 185:
			goto st77
		case 186:
			goto st78
		case 187:
			goto st79
		case 228:
			goto tr46
		case 229:
			goto tr47
		case 230:
			goto tr48
		case 231:
			goto tr49
		case 232:
			goto tr50
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr45
		}
		goto st39
	st45:
		if p++; p == pe {
			goto _test_eof45
		}
	st_case_45:
		switch data[p] {
		case 128:
			goto st40
		case 131:
			goto st40
		case 137:
			goto st40
		case 138:
			goto st43
		case 170:
			goto st46
		case 228:
			goto tr46
		case 229:
			goto tr47
		case 230:
			goto tr48
		case 231:
			goto tr49
		case 232:
			goto tr50
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr45
		}
		goto st39
	st46:
		if p++; p == pe {
			goto _test_eof46
		}
	st_case_46:
		switch data[p] {
		case 228:
			goto tr46
		case 229:
			goto tr47
		case 230:
			goto tr62
		case 231:
			goto tr49
		case 232:
			goto tr50
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr45
		}
		goto st39
tr47:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st47
tr92:
//line time_parser/time_parser.rl:23

        fmt.Println("begin year")
        year_begin_index = p
        fmt.Println(year_begin_index)
    
//line time_parser/time_parser.rl:41

        // fmt.Println("begin month")
        month_begin_index = p
        // fmt.Println(month_begin_index)
    
//line time_parser/time_parser.rl:62

        // fmt.Println("end day")
        day_end_index = p
        // fmt.Println(day_end_index)
    
//line time_parser/time_parser.rl:67

        if day_begin_index < day_end_index {
            day = data[day_begin_index: day_end_index]
        }
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st47
	st47:
		if p++; p == pe {
			goto _test_eof47
		}
	st_case_47:
//line time_parser/time_parser.go:1536
		switch data[p] {
		case 133:
			goto st48
		case 137:
			goto st53
		case 141:
			goto st56
		case 142:
			goto st61
		case 155:
			goto st64
		case 228:
			goto tr46
		case 229:
			goto tr47
		case 230:
			goto tr48
		case 231:
			goto tr49
		case 232:
			goto tr50
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr45
		}
		goto st39
	st48:
		if p++; p == pe {
			goto _test_eof48
		}
	st_case_48:
		switch data[p] {
		case 171:
			goto st40
		case 173:
			goto st40
		case 228:
			goto tr46
		case 229:
			goto tr47
		case 230:
			goto tr48
		case 231:
			goto tr49
		case 232:
			goto tr50
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr45
		}
		goto st39
tr48:
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st49
tr93:
//line time_parser/time_parser.rl:62

        // fmt.Println("end day")
        day_end_index = p
        // fmt.Println(day_end_index)
    
//line time_parser/time_parser.rl:67

        if day_begin_index < day_end_index {
            day = data[day_begin_index: day_end_index]
        }
    
//line time_parser/time_parser.rl:57

        // fmt.Println("begin day")
        day_begin_index = p
        // fmt.Println(day_begin_index)
    
	goto st49
	st49:
		if p++; p == pe {
			goto _test_eof49
		}
	st_case_49:
//line time_parser/time_parser.go:1621
		switch data[p] {
		case 152:
			goto st50
		case 228:
			goto tr46
		case 229:
			goto tr47
		case 230:
			goto tr48
		case 231:
			goto tr49
		case 232:
			goto tr50
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr45
		}
		goto st39
	st50:
		if p++; p == pe {
			goto _test_eof50
		}
	st_case_50:
		switch data[p] {
		case 168:
			goto st51
		case 228:
			goto tr46
		case 229:
			goto tr47
		case 230:
			goto tr48
		case 231:
			goto tr49
		case 232:
			goto tr50
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr45
		}
		goto st39
	st51:
		if p++; p == pe {
			goto _test_eof51
		}
	st_case_51:
		switch data[p] {
		case 228:
			goto tr46
		case 229:
			goto tr70
		case 230:
			goto tr48
		case 231:
			goto tr49
		case 232:
			goto tr50
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr45
		}
		goto st39
tr70:
//line time_parser/time_parser.rl:23
